# hyper-api-rust

./: .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  MIGRATING-0.3.md  Makefile  README.md  build.ps1  deny.toml  release-please-config.json  run_all_examples.ps1  run_all_examples.sh  run_examples_wsl.sh
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  npm-build-publish.yml  release-please.yml  release.yml  verify-hyperd-pin.yml
docs/: CODE_SCANNING_FIXES.md  GITHUB_OPERATIONS.md  ROW_MAPPING.md  WHATS_NEW_0.4.md
docs/superpowers/plans/: 2026-07-08-kv-store-m1-api.md  2026-07-09-kv-store-m2-mcp.md  2026-07-11-kv-mcp-llm-ergonomics.md
docs/superpowers/specs/: 2026-07-08-kv-store-design.md  2026-07-10-kv-mcp-llm-ergonomics-design.md
hyperdb-api/: CHANGELOG.md  Cargo.toml  README.md
hyperdb-api-core/: CHANGELOG.md  Cargo.toml
hyperdb-api-core/src/client/: async_client.rs  auth.rs  client.rs
hyperdb-api-core/src/types/: special.rs
hyperdb-api-core/tests/common/: mod.rs
hyperdb-api-derive/: Cargo.toml  README.md
hyperdb-api-derive/src/: lib.rs  table_derive.rs
hyperdb-api-derive/tests/: ui.rs
hyperdb-api-derive/tests/ui/fail/: derive_from_row_on_enum.rs  derive_from_row_on_enum.stderr  derive_table_on_enum.rs  derive_table_on_enum.stderr  derive_table_unrecognized_attr.rs  derive_table_unrecognized_attr.stderr  derive_table_unsupported_type.rs  derive_table_unsupported_type.stderr  query_as_missing_args.rs  query_as_missing_args.stderr  query_scalar_missing_args.rs  query_scalar_missing_args.stderr
hyperdb-api-derive/tests/ui/pass/: derive_from_row_basic.rs  derive_table_basic.rs  derive_table_custom_name.rs  derive_table_rename_field.rs
hyperdb-api-node/: AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  README.md  index.js  package-lock.json  package.json
hyperdb-api-node/__test__/: smoke.mjs
hyperdb-api-node/examples/hyper-explorer/: README.md  package-lock.json  package.json
hyperdb-api-node/examples/hyper-explorer/server/: routes.ts
hyperdb-api-node/npm/darwin-arm64/: package.json
hyperdb-api-node/npm/darwin-x64/: package.json
hyperdb-api-node/npm/linux-arm64-gnu/: CHANGELOG.md  package.json
hyperdb-api-node/npm/linux-x64-gnu/: package.json
hyperdb-api-node/npm/linux-x64-musl/: package.json
hyperdb-api-node/npm/win32-x64-msvc/: package.json
hyperdb-api-node/src/: columnar.rs  result.rs
hyperdb-api-salesforce/: CHANGELOG.md
hyperdb-api-salesforce/src/: config.rs  error.rs  jwt.rs  provider.rs  token.rs
hyperdb-api/benches/: async_parallel_benchmark.rs  benchmark.rs  benchmark_suite.rs  kv_benchmark.rs
hyperdb-api/examples/: async_parity_smoke.rs  grpc_truncation_probe.rs
hyperdb-api/examples/additional_examples/: compile_time_validation.rs  connection_pool.rs  grpc_query.rs  row_mapping_forms.rs  threaded_inserter.rs
hyperdb-api/src/: arrow_inserter.rs  arrow_reader.rs  arrow_result.rs  async_arrow_inserter.rs  async_connection.rs  async_connection_builder.rs  async_inserter.rs  async_kv_store.rs  async_prepared.rs  async_result.rs  async_transport.rs  catalog.rs  connection.rs  connection_builder.rs  copy.rs  error.rs  grpc_connection.rs  inserter.rs  kv_store.rs  lib.rs  names.rs  params.rs  pool.rs  prepared.rs  process.rs  query_as.rs  result.rs  row_accessor.rs  server_version.rs  table.rs  table_definition.rs  transport.rs
hyperdb-api/tests/: async_connection_tests.rs  async_kv_store_tests.rs  compile_time_validation_tests.rs  inserter_tests.rs  kv_store_in_tests.rs  kv_store_tests.rs  logging_tests.rs  param_types_tests.rs  phase0_compile_check_spike.rs  pool_tests.rs  process_lifecycle_tests.rs  ra_expansion_check.rs  remaining_features_tests.rs
hyperdb-api/tests/common/: mod.rs
hyperdb-bootstrap/: CHANGELOG.md  README.md  build.rs  hyperd-version.toml
hyperdb-bootstrap/src/: download.rs  error.rs  extract.rs  install.rs  lib.rs  platform.rs  release.rs  scrape.rs  url.rs
hyperdb-bootstrap/tests/: integration.rs
hyperdb-compile-check/: Cargo.toml  README.md
hyperdb-compile-check/src/: db.rs  diagnostic.rs  dry_run.rs  error_extract.rs  lib.rs  registry.rs  validate.rs
hyperdb-mcp/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  ROADMAP.md  SMOKE_TESTS.md
hyperdb-mcp/examples/: demo.rs
hyperdb-mcp/npm/: CHANGELOG.md  bin.js  package.json
hyperdb-mcp/npm/darwin-arm64/: package.json
hyperdb-mcp/npm/darwin-x64/: package.json
hyperdb-mcp/npm/linux-x64-gnu/: package.json
hyperdb-mcp/npm/win32-x64-msvc/: package.json
hyperdb-mcp/src/: attach.rs  chart.rs  engine.rs  error.rs  ingest.rs  ingest_arrow.rs  lib.rs  main.rs  readme.rs  saved_queries.rs  server.rs  table_catalog.rs  watcher.rs
hyperdb-mcp/src/daemon/: discovery.rs  health.rs  mod.rs  run.rs  spawn.rs
hyperdb-mcp/tests/: attach_tests.rs  chart_tests.rs  cross_db_dml_smoke.rs  daemon_tests.rs  end_to_end_mcp_tests.rs  engine_tests.rs  error_tests.rs  export_tests.rs  ingest_arrow_tests.rs  ingest_tests.rs  integration_tests.rs  kv_tools_tests.rs  per_tool_database_tests.rs  read_only_tests.rs  readme_tests.rs  resource_tests.rs  saved_queries_tests.rs  table_catalog_tests.rs  transaction_tests.rs  two_db_model_tests.rs  watcher_tests.rs
hyperdb-mcp/tests/common/: mod.rs
scripts/: assemble-npm.sh
sea-query-hyperdb/: CHANGELOG.md  Cargo.toml
sea-query-hyperdb/examples/: basic_usage.rs
sea-query-hyperdb/src/: lib.rs
