[package]
name = "hyperdb-api-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for hyperdb-api (FromRow derive)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["database", "hyper", "derive", "proc-macro"]
categories = ["database"]

[lib]
proc-macro = true

# NOTE: the compile-time feature and hyperdb-compile-check dep are intentionally
# absent from this Cargo.toml. A direct path dep on hyperdb-compile-check would
# create a cycle:
#   hyperdb-api → hyperdb-api-derive → hyperdb-compile-check → hyperdb-api
# Cargo rejects this even for optional deps. The wiring strategy for Milestone B
# is tracked in the compile-time SQL validator plan (see COMPILE_TIME_SQL_VALIDATOR_PLAN.md).
# Options under consideration: build.rs with OUT_DIR, out-of-process subprocess, or
# promoting HyperProcess/Connection to hyperdb-api-core.

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
