[package]
name = "hyperdb-api-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macros for hyperdb-api (FromRow derive)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["database", "hyper", "derive", "proc-macro"]
categories = ["database"]

[lib]
proc-macro = true

[features]
# Enable compile-time SQL validation via query_as! and derive(Table) #[hyperdb(register)].
# Off by default. When enabled, hyperdb-compile-check is pulled in as a dep.
# The dep cycle (hyperdb-api → hyperdb-api-derive → hyperdb-compile-check → hyperdb-api)
# is broken by removing hyperdb-api-derive from hyperdb-api's dependencies entirely.
# Users of derive macros add hyperdb-api-derive directly.
compile-time = ["dep:hyperdb-compile-check"]

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
# x-release-please-start-version
hyperdb-compile-check = { path = "../hyperdb-compile-check", version = "=0.3.1", optional = true }
# x-release-please-end

[dev-dependencies]
# x-release-please-start-version
hyperdb-api = { path = "../hyperdb-api", version = "=0.3.1" }
# x-release-please-end
trybuild = { version = "1", features = ["diff"] }

[lints]
workspace = true
